# ActionsTest

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yaml
platform/linux/: TestApp.desktop
platform/macOS/: TestApp.icns
platform/windows/: TestApp.rc
src/: main.cpp
